Update some linke

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <div class='bio-container'>
                     <h1 class='bio-title'>Timothy Voice</h1>
                     <p class='bio-summary'>
-                        Software engineer and <a href="https://www.youtube.com/watch?v=wASCH_gPnDw" target="_blank"
-                            rel="noopener noreferrer">Rich Hickey</a> fanboy, building awesome things at <a
+                        Software engineer building awesome things at <a
                             target="_blank" el="noopener noreferrer" href="https://www.pippa.io">Pippa.io</a>. Formerly
                         building other awesome things at <a href="http://www.mightymaker.io/" target="_blank"
                             rel="noopener noreferrer">Mighty
                             Maker</a>. Co-host of the <a href="http://podcast.fpbookclub.com" target="_blank"
-                            rel="noopener noreferrer">Functional Programming Bookclub Podcast</a>.
+                            rel="noopener noreferrer">Functional Programming Bookclub Podcast</a> and <a href="https://www.youtube.com/watch?v=wASCH_gPnDw" target="_blank"
+                            rel="noopener noreferrer">Rich Hickey</a> fanboy.
                     </p>
                     <p class='bio-summary'>
                         Currently reading: <a
