--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             Object-Oriented Software</a>
                     </p>
                     <p class='bio-summary'>
-                        Thoughts and opinions expressed are my own; proceed at own risk.
+                        Ideas belong to others, thoughts and opinions are my own.
                     </p>
                 </div>
             </div>
