Update reading list

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     <p class='bio-summary'>
                         Currently reading: <a
                             href="https://www.amazon.com/Design-Patterns-Elements-Reusable-Object-Oriented-dp-0201633612/dp/0201633612/ref=mt_hardcover?_encoding=UTF8&me=&qid="
-                            target="_blank" rel="noopener noreferrer">Design Patterns: Elements of Reusable
-                            Object-Oriented Software</a>
+                            target="_blank" rel="noopener noreferrer">Design Patternse</a>
                     </p>
                     <p class='bio-summary'>
                         Ideas belong to others, thoughts and opinions are my own.
